# sw2023

./: .gitignore  .mailmap  .readthedocs.yaml  MANIFEST.in  README.md  REPLICATION.md  make_figures.py  mc_imse_extra.csv  mc_imse_product.csv  mc_imse_results.csv  norway_for_python.csv  norway_loocv_comparison.csv  pyproject.toml  replication.ipynb  replication.py  requirements.txt  run_loocv_comparison.py  sw2023_jss_paper.tex  sw2023_refs.bib  viz_rotation_3d.py
docs/: changelog.rst  conf.py  index.rst  installation.rst  methodology.rst  quickstart.rst  replication.rst
docs/api/: bandwidth.rst  bootstrap.rst  model.rst  panel.rst  results.rst  visualize.rst
sw2023/: __init__.py
sw2023/core/: __init__.py  bandwidth.py  bootstrap.py  decompose.py  frontier.py  model.py  preprocess.py  results.py  transform.py  visualize.py
sw2023/examples/: norway_panel_test.py  norway_test.py
sw2023/panel/: __init__.py  four_component.py
sw2023/stata/: sw2023.ado  sw2023.sthlp  sw2023_example.do  sw2023_native_example.do  sw2023_stata.py  sw2023test.ado
sw2023/tests/: monte_carlo.py  test_model.py
