[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sw2023"
version = "0.3.2"
description = "Nonparametric Multiple-Output Stochastic Frontier Analysis (Simar & Wilson 2023)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Choonjoo Lee", email = "bloom.rampike@gmail.com" }
]
keywords = [
    "stochastic frontier analysis",
    "efficiency",
    "nonparametric",
    "multiple output",
    "production function",
    "panel data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.4"]
dev = [
    "matplotlib>=3.4",
    "jupyter",
    "pytest>=7",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/renegade68/sw2023"
Documentation = "https://github.com/renegade68/sw2023#readme"
Issues = "https://github.com/renegade68/sw2023/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sw2023*"]
exclude = ["sw2023/tests*", "sw2023/examples*"]

[tool.setuptools.package-data]
sw2023 = ["stata/*.do", "stata/*.py"]
